# peytonites2024

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  install.ipynb  install.md  serial_nbody.ipynb  simulation.ipynb
docs/pbody/: index.rst
hackathon/: README.txt  baseOut  baseVecCuPyOut  baseVecOut  clean.sh  gpuBaseCuPyOut  gpuOpt1CuPyOut  gpuOpt1CuPyOut_100K  gpuOpt1CuPyOut_10K  gpuOpt1CuPyOut_1K  gpuOpt1CuPyOut_1M  gpuOpt1CuPyOut_25K  jax.sbatch  jax_nbody.ipynb  jax_nbody.py  jax_nbody_notebook.ipynb  job.sh  jobTIMING.sh  main.py  mainGpu.py  mainGpuOpt1.py  mainGpuOpt1_mod.py  mainGpu_mod.py  mainVec.py  run.sh  serial_nbody.ipynb  submit.sbatch
licenses/: LICENSE.rst
pbody/: conftest.py
peytonites/: __init__.py  conftest.py  core.py  dist.py  plot.py  utils.py  version.py
