[build-system]
requires = [ "hatch-vcs", "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "peytonites"
description = "N-body code"
readme = "README.md"
authors = [
  { name = "peytonites2024", email = "" },
]
requires-python = ">=3.10"
classifiers = [
  "Private :: Do Not Upload",
  "License :: OSI Approved :: BSD License",
]
dynamic = [ "version" ]
dependencies = [
  "astropy",
  "matplotlib",
]
optional-dependencies.docs = [
  "sphinx",
  "sphinx-astropy",
  "requests",
  "nbsphinx",
  "sphinx_copybutton",
  "sphinx_book_theme",
  "ipython",
]
optional-dependencies.test = [
  "pytest-astropy",
]
urls.Homepage = "https://github.com/robelgeda/peytonites2024.git"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "peytonites/version.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.cuda11]
extra-dependencies = [
  "cupy-cuda11x",
]

[tool.hatch.envs.cuda12]
extra-dependencies = [
  "cupy-cuda12x",
]

[tool.hatch.envs.jupyter]
extra-dependencies = [
  "jupyterlab",
]
scripts.lab = "jupyter lab {args}"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.hatch.envs.docs]
features = [ "docs" ]
dependencies = [ "sphinx-autobuild" ]
scripts.linkcheck = "sphinx-build -b=linkcheck docs docs/_build/linkcheck {args}"
scripts.html = "sphinx-build --keep-going -n -T -b=html docs docs/_build/html {args}"
scripts.serve = "sphinx-autobuild -n -T -b=html docs docs/_build/html {args}"
scripts.man = "sphinx-build --keep-going -n -T -b=man docs docs/_build/man {args}"

