[build-system]
requires = [ "hatch-vcs", "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "peytonites"
description = "N-body code"
readme = "README.md"
authors = [
  { name = "peytonites2024", email = "" },
]
requires-python = ">=3.10"
classifiers = [
  "Private :: Do Not Upload",
  "License :: OSI Approved :: BSD License",
]
dynamic = [ "version" ]
dependencies = [
  "astropy",
  "matplotlib",
]
optional-dependencies.docs = [
  "sphinx",
  "sphinx-astropy",
  "requests",
  "nbsphinx",
  "sphinx_copybutton",
  "sphinx_book_theme",
  "ipython",
  "myst_parser",
]
optional-dependencies.test = [
  "pytest-astropy",
]
optional-dependencies.cuda12 = [
  "cupy-cuda12x",
]
optional-dependencies.jax = [
  "jax[cuda12]",
]
urls.Homepage = "https://github.com/robelgeda/peytonites2024.git"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "peytonites/version.py"

[tool.hatch.envs.default]
installer = "uv"
extra-dependencies = [ "ipykernel" ]

[tool.hatch.envs.cuda12]
features = [ "cuda12" ]
scripts.ipykernel = "python -m ipykernel install --user --name cuda12"

[tool.hatch.envs.jax]
features = [ "jax" ]
scripts.ipykernel = "python -m ipykernel install --user --name jax"
post-install-commands = [
  "uv pip install -U --exclude-newer=2024-05-01 jax[cuda12]",
]

[tool.hatch.envs.jupyter]
extra-dependencies = [
  "jupyterlab",
]
scripts.lab = "jupyter lab {args}"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.hatch.envs.docs]
features = [ "docs" ]
dependencies = [ "sphinx-autobuild" ]
scripts.linkcheck = "sphinx-build -b=linkcheck docs docs/_build/linkcheck {args}"
scripts.html = "sphinx-build --keep-going -n -T -b=html docs docs/_build/html {args}"
scripts.serve = "sphinx-autobuild -n -T -b=html docs docs/_build/html {args}"
scripts.man = "sphinx-build --keep-going -n -T -b=man docs docs/_build/man {args}"

